--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -13,6 +13,9 @@
   },
   "homepage": "https://avajeano.github.io/portfolio",
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.1"
